# face-detection-cpp

./: .gitignore  CMakeLists.txt  README.md  faceDetect.cpp
