cmake_minimum_required(VERSION 2.8)
project( faceDetectCPP )
file(MAKE_DIRECTORY bin)
file(MAKE_DIRECTORY bin/model)
file(MAKE_DIRECTORY bin/images)
file(DOWNLOAD https://github.com/opencv/opencv_3rdparty/raw/19512576c112aa2c7b6328cb0e8d589a4a90a26d/res10_300x300_ssd_iter_140000_fp16.caffemodel bin/model/res10_300x300_ssd_iter_140000_fp16.caffemodel)
file(DOWNLOAD https://raw.githubusercontent.com/opencv/opencv/master/samples/dnn/face_detector/deploy.prototxt bin/model/deploy.prototxt)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( bin/faceDetect faceDetect.cpp )
target_link_libraries( bin/faceDetect ${OpenCV_LIBS} )